# lgrtk

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  hpc_algorithm.hpp  hpc_array.hpp  hpc_array_traits.hpp  hpc_array_vector.hpp  hpc_atomic.hpp  hpc_dimensional.hpp  hpc_execution.hpp  hpc_functional.hpp  hpc_index.hpp  hpc_iterator.hpp  hpc_limits.hpp  hpc_macros.hpp  hpc_matrix.hpp  hpc_matrix3x3.hpp  hpc_memory.hpp  hpc_numeric.hpp  hpc_quaternion.hpp  hpc_range.hpp  hpc_range_sum.hpp  hpc_symmetric3x3.hpp  hpc_tensor_detail.hpp  hpc_transform_reduce.hpp  hpc_vector.hpp  hpc_vector3.hpp  lgr.cpp  lgr_adapt.cpp  lgr_adapt.hpp  lgr_adapt_util.hpp  lgr_allocator.hpp  lgr_allocator_inline.hpp  lgr_array.hpp  lgr_array_in_vector.hpp  lgr_array_vector.hpp  (+100 more)
src/: AdaptRecon.cpp  AdaptRecon.hpp  ApplyConstraints.hpp  Basis.cpp  Basis.hpp  BodyLoads.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  CMakeLists.txt  CellTools.cpp  CellTools.hpp  CmdLineOutput.cpp  CmdLineOutput.hpp  ConductivityModels.cpp  ConductivityModels.hpp  ContactForce.cpp  ContactForce.hpp  CrsLinearProblem.hpp  CrsMatrix.cpp  CrsMatrix.hpp  Cubature.cpp  Cubature.hpp  Driver.cpp  Driver.hpp  ElastostaticSolve.cpp  ElastostaticSolve.hpp  ElementHelpers.hpp  ErrorHandling.hpp  EssentialBCs.hpp  ExactSolution.cpp  ExactSolution.hpp  ExplicitFunctors.cpp  ExplicitFunctors.hpp  ExplicitLambdas.cpp  ExplicitLambdas.hpp  FEMesh.cpp  FEMesh.hpp  FieldDB.cpp  FieldDB.hpp  Fields.cpp  (+55 more)
src/plato/: AbstractLocalMeasure.hpp  AbstractLocalVectorFunctionInc.hpp  AbstractScalarFunction.hpp  AbstractScalarFunctionInc.hpp  AbstractVectorFunction.hpp  AbstractVectorFunctionInc.hpp  AbstractVectorFunctionVMS.hpp  AdjointComplexRayleighDamping.hpp  AdjointStructuralDynamicsResidual.hpp  AlgebraicRocketMain.cpp  AnalyzeMacros.hpp  ApplyConstraints.hpp  ApplyPenalty.hpp  ApplyProjection.hpp  ApplyWeighting.hpp  BodyLoads.hpp  CellForcing.hpp  ComplexElasticEnergy.hpp  ComplexInertialEnergy.hpp  ComplexLinearStress.hpp  ComplexRayleighDamping.hpp  ComplexStrain.hpp  ComplexStressDivergence.hpp  ComputeFrequencyResponseMisfit.hpp  ComputedField.hpp  DivisionFunction.cpp  DivisionFunction.hpp  DotProduct.hpp  DynamicCompliance.hpp  EMKinematics.hpp  EMKinetics.hpp  EMStressPNorm.cpp  EMStressPNorm.hpp  EffectiveEnergy.cpp  EffectiveEnergy.hpp  Eigenvalues.hpp  ElastostaticResidual.cpp  ElastostaticResidual.hpp  ElastostaticSolve.cpp  ElastostaticSolve.hpp  (+190 more)
src/solverInterfaces/: CMakeLists.txt
tests/: CMakeLists.txt  runtest.sh  timer.cmake
tests/CooksMembrane/: CMakeLists.txt  CooksMembrane.yaml  CooksMembrane_v1.g  CooksMembrane_v1.jou  README.md  assoc.txt
tests/Noh/: CMakeLists.txt  Noh.yaml  Noh_adapt.yaml  assoc.txt
tests/Sedov/: CMakeLists.txt  Sedov_adapt.yaml  assoc.txt
tests/contactPenalty/: README.md  assoc.txt  cylinder.yaml
tests/cube/: CMakeLists.txt  assoc.txt  cube.yaml  cubeRestart1.yaml  cubeRestart2.yaml
tests/cubeIdealGas/: CMakeLists.txt  cubeIdealGas.yaml  cubeIdealGas_adapt.yaml
tests/cubeMieGruniesen/: CMakeLists.txt  cubeMieGruniesen.yaml
tests/cylinderDBC/: CMakeLists.txt  cylinder.yaml
tests/plato/: CMakeLists.txt
tests/triplePoint/: assoc.txt  triple_point_problem.dmg  triple_point_problem.vtu  triple_point_problem.xml
unit_tests/: AlgebraicRocketTest.cpp  AmgXTests.cpp  CMakeLists.txt  ConductivityModels.cpp  CrsMatrixTests.cpp  DerivativeTests.cpp  ElastodynamicsTest.cpp  ElastostaticSolveTests.cpp  ElectroelasticTests.cpp  ElementHelpersReplacements.cpp  FieldDB.cpp  HamiltonJacobiTest.cpp  HeatEquationTests.cpp  IdealGas.cpp  InitialConditionTests.cpp  LGRAppIntxTests.cpp  LGRAppIntxTests.hpp  LGRAppTests.cpp  LGRAppUnitTestMain.cpp  LGRTestHelpers.cpp  LGRTestHelpers.hpp  LowRmPotentialSolveTests.cpp  LowRmRLCCircuitTests.cpp  MassPropertiesTests.cpp  MatrixIOTests.cpp  PlasticityTests.cpp  PlatoAugLagStressTest.cpp  PlatoCenterGravityTest.cpp  PlatoFunctorsTest.cpp  PlatoMathHelpersTest.cpp  PlatoTestHelpers.cpp  PlatoTestHelpers.hpp  PlatoUnitTestMain.cpp  R3D.cpp  SampleTests.cpp  SimplexCellToolsTests.cpp  SimplexCubatureTests.cpp  StructuralDynamicsTest.cpp  Teuchos_LGRAppUnitTestMain.cpp  Teuchos_StandardUnitTestMain.cpp  (+26 more)
unit_tests/IntxTests/: CellForcing_appfile.xml  CellForcing_assoc.txt  CellForcing_input.xml  EMStressPNorm_appfile.xml  EMStressPNorm_input.xml  EffectiveEnergy_appfile.xml  EffectiveEnergy_assoc.txt  EffectiveEnergy_input.xml  InternalElectroelasticEnergy_appfile.xml  InternalElectroelasticEnergy_input.xml  InternalEnergyGradX_appfile.xml  InternalEnergyGradX_input.xml  InternalEnergyHeatEq_assoc.txt  InternalEnergyHeatEq_input.xml  InternalThermoelasticEnergy_input.xml  MultipleProblemDefinitions_appfile.xml  MultipleProblemDefinitions_input_1.xml  MultipleProblemDefinitions_input_2.xml  OperationParameter_appfile.xml  OperationParameter_input.xml  amgx.json
v2/: CMakeLists.txt  bob.cmake
v2/cuda_windows/: CMakeLists.txt
v2/inputs/: CMakeLists.txt  XPrizeNeckingTet4Coarse.g  bar2_Noh.yaml  bar2_Sod.yaml  bar2_constant.yaml  bar2_elastic_wave.yaml  bar2_gas_constant.yaml  bar2_gas_expand.yaml  bar2_oscillate.yaml  bar2_void_expand.yaml  comptet_Cooks_membrane.yaml  comptet_Cooks_membrane_J2.yaml  comptet_block4.yaml  comptet_butterfly.yaml  comptet_cube_isochoric.yaml  (+38 more)
v3/: .clang-format  CMakeLists.txt  hpc_algorithm.hpp  hpc_array.hpp  hpc_array_traits.hpp  hpc_array_vector.hpp  hpc_atomic.hpp  hpc_dimensional.hpp  hpc_execution.hpp  hpc_functional.hpp  hpc_index.hpp  hpc_iterator.hpp  hpc_limits.hpp  hpc_macros.hpp  hpc_math.hpp  hpc_matrix.hpp  hpc_matrix3x3.hpp  hpc_memory.hpp  hpc_numeric.hpp  hpc_quaternion.hpp  hpc_range.hpp  hpc_range_sum.hpp  hpc_symmetric3x3.hpp  hpc_tensor_detail.hpp  hpc_transform_reduce.hpp  hpc_vector.hpp  hpc_vector3.hpp  lgr.cpp  lgr_adapt.cpp  lgr_adapt.hpp  lgr_adapt_util.hpp  lgr_allocator.hpp  lgr_array.hpp  lgr_array_in_vector.hpp  lgr_array_vector.hpp  lgr_bar.cpp  lgr_bar.hpp  lgr_composite_gradient.cpp  lgr_composite_h_min.cpp  lgr_composite_inline.hpp  (+90 more)
(+289 files in other folders)
