if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/plato/CMakeLists.txt)
  ADD_SUBDIRECTORY(plato)
  message("-- Adding plato tests")
else()
  message("-- Plato tests submodule has not been cloned. skipping.")
  message("--   To include plato tests, change into tests/plato directory, then:")
  message("--    git submodule init")
  message("--    git submodule update")
  message("--   Then rerun cmake.")
endif()
